--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     
 </head>
 <body>
-    
+    <div>
+        <button class="send-btn">Send Message</button>
+        <p class="title"></p>
+    </div>
 </body>
 </html>
